--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,32 +22,48 @@
             android:layout_height="match_parent"
             android:background="@color/white"
             android:scaleType="centerCrop"
-            android:src="@mipmap/img" />
+            android:src="@drawable/logo" />
     </androidx.cardview.widget.CardView>
-    <EditText
-        android:id="@+id/login"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:hint="   Username"
         android:layout_margin="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="20sp"
-        android:background="@drawable/corners"/>
+        android:background="@drawable/corners">
+        <EditText
+            android:id="@+id/mail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="   Email"
+            android:layout_marginHorizontal="10dp"
+
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="20sp"
+            android:background="@android:color/transparent"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/corners">
+
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:hint="   Password"
-        android:layout_margin="20dp"
+        android:layout_marginHorizontal="10dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="20sp"
-        android:background="@drawable/corners"/>
+        android:background="@android:color/transparent"/>
+    </LinearLayout>
     <Button
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/button"
+        android:id="@+id/loginbtn"
         android:text="Login"
         android:layout_margin="20dp"
         />
